# libdazzle

./: .editorconfig  .gitlab-ci.yml  AUTHORS  CONTRIBUTING.md  NEWS  README.md  libdazzle.doap  meson.build  meson_options.txt
doc/: dazzle-docs.sgml  meson.build
doc/xml/: meson.build
examples/app/: README.md  example-application.c  example-application.h  example-document-view.c  example-document-view.h  example-document-view.ui  example-document.c  example-document.h  example-window.c  example-window.h  example-window.ui  example.gresources.xml  main.c  meson.build
src/: Dazzle-1.0.metadata  dazzle.gresources.xml  dazzle.h  dazzle.map  dzl-debug.h.in  dzl-enums.c.in  dzl-enums.h.in  dzl-init.c  dzl-version-macros.h  dzl-version.h.in  meson.build
src/actions/: dzl-action-group.h  dzl-child-property-action.c  dzl-child-property-action.h  dzl-properties-group.c  dzl-properties-group.h  dzl-settings-flag-action.c  dzl-settings-flag-action.h  dzl-widget-action-group.c  dzl-widget-action-group.h  meson.build
src/animation/: dzl-animation.c  dzl-animation.h  dzl-box-theatric.c  dzl-box-theatric.h  dzl-frame-source.c  dzl-frame-source.h  meson.build
src/app/: dzl-application-window.c  dzl-application-window.h  dzl-application.c  dzl-application.h  meson.build
src/backports/: gtkeventcontrollermotion.c  gtkeventcontrollermotion.h
src/bindings/: dzl-binding-group.c  dzl-binding-group.h  dzl-signal-group.c  dzl-signal-group.h  meson.build
src/cache/: dzl-task-cache.c  dzl-task-cache.h  meson.build
src/files/: dzl-directory-model.c  dzl-directory-model.h  dzl-directory-reaper.c  dzl-directory-reaper.h  dzl-file-transfer.c  dzl-file-transfer.h  dzl-recursive-file-monitor.c  dzl-recursive-file-monitor.h  meson.build
src/fuzzy/: dzl-fuzzy-index-builder.c  dzl-fuzzy-index-builder.h  dzl-fuzzy-index-cursor.c  dzl-fuzzy-index-match.c  dzl-fuzzy-index-match.h  dzl-fuzzy-index-private.h  dzl-fuzzy-index.c  dzl-fuzzy-index.h  dzl-fuzzy-mutable-index.c  dzl-fuzzy-mutable-index.h  dzl-fuzzy-util.c  dzl-fuzzy-util.h  meson.build
src/graphing/: dzl-column-private.h  dzl-cpu-graph.c  dzl-cpu-graph.h  dzl-cpu-model.c  dzl-cpu-model.h  dzl-cpu-table.c  dzl-cpu-table.h  dzl-graph-column-private.h  dzl-graph-column.c  dzl-graph-column.h  dzl-graph-line-renderer.c  dzl-graph-line-renderer.h  dzl-graph-model.c  dzl-graph-model.h  dzl-graph-renderer.c  dzl-graph-renderer.h  dzl-graph-view.c  dzl-graph-view.h  meson.build
src/menus/: dzl-joined-menu.c  dzl-joined-menu.h  dzl-menu-button-item.c  dzl-menu-button-item.h  dzl-menu-button-section.c  dzl-menu-button-section.h  dzl-menu-button-section.ui  dzl-menu-button.c  dzl-menu-button.h  dzl-menu-button.ui  dzl-menu-manager.c  dzl-menu-manager.h  meson.build
src/panel/: Adwaita.css  dzl-dock-bin-edge-private.h  dzl-dock-bin-edge.c  dzl-dock-bin-edge.h  dzl-dock-bin.c  dzl-dock-bin.h  dzl-dock-item.c  dzl-dock-item.h  dzl-dock-manager.c  dzl-dock-manager.h  dzl-dock-overlay-edge.c  dzl-dock-overlay-edge.h  dzl-dock-overlay.c  dzl-dock-overlay.h  dzl-dock-paned-private.h  dzl-dock-paned.c  dzl-dock-paned.h  dzl-dock-revealer.c  dzl-dock-revealer.h  dzl-dock-stack.c  dzl-dock-stack.h  dzl-dock-transient-grab.c  dzl-dock-transient-grab.h  dzl-dock-types.h  dzl-dock-widget.c  dzl-dock-widget.h  dzl-dock-window.c  dzl-dock-window.h  dzl-dock.c  dzl-dock.h  dzl-tab-private.h  dzl-tab-strip.c  dzl-tab-strip.h  dzl-tab.c  dzl-tab.h  meson.build  test-multi-paned.ui  test-panel.css  test-tab-strip.ui
src/pathbar/: dzl-path-bar.c  dzl-path-bar.h  dzl-path-element.c  dzl-path-element.h  dzl-path.c  dzl-path.h  meson.build
src/prefs/: dzl-preferences-bin-private.h  dzl-preferences-bin.c  dzl-preferences-bin.h  dzl-preferences-entry.c  dzl-preferences-entry.h  dzl-preferences-entry.ui  dzl-preferences-file-chooser-button.c  dzl-preferences-file-chooser-button.h  dzl-preferences-file-chooser-button.ui  dzl-preferences-flow-box.c  dzl-preferences-flow-box.h  dzl-preferences-font-button.c  dzl-preferences-font-button.h  dzl-preferences-font-button.ui  dzl-preferences-group-private.h  dzl-preferences-group.c  dzl-preferences-group.h  dzl-preferences-group.ui  dzl-preferences-language-row.c  dzl-preferences-language-row.h  dzl-preferences-language-row.ui  dzl-preferences-page-private.h  dzl-preferences-page.c  dzl-preferences-page.h  dzl-preferences-page.ui  dzl-preferences-spin-button.c  dzl-preferences-spin-button.h  dzl-preferences-spin-button.ui  dzl-preferences-switch.c  dzl-preferences-switch.h  dzl-preferences-switch.ui  dzl-preferences-view.c  dzl-preferences-view.h  dzl-preferences-view.ui  dzl-preferences.c  dzl-preferences.h  meson.build
src/search/: dzl-fuzzy-index-builder.c  dzl-fuzzy-index-builder.h  dzl-fuzzy-index-cursor.c  dzl-fuzzy-index-cursor.h  dzl-fuzzy-index-match.c  dzl-fuzzy-index-match.h  dzl-fuzzy-index-private.h  dzl-fuzzy-index.c  dzl-fuzzy-index.h  dzl-fuzzy-mutable-index.c  dzl-fuzzy-mutable-index.h  dzl-levenshtein.c  dzl-levenshtein.h  dzl-pattern-spec.c  dzl-pattern-spec.h  dzl-trie.c  dzl-trie.h  meson.build
src/settings/: dzl-settings-sandwich.c  dzl-settings-sandwich.h  meson.build
src/shortcuts/: dzl-shortcut-accel-dialog.c  dzl-shortcut-accel-dialog.h  (+41 more)
tests/: meson.build  test-application.c  test-bin.c  test-binding-group.c  test-bolding-label.c  test-box.c  test-cancellable.c  test-counters-window.c  test-cpu-graph.c  test-desktop-index.c  test-directory-reaper.c  test-elastic-bin.c  test-empty-state.c  test-entry-box.c  test-file-chooser-entry.c  test-file-manager.c  test-file-transfer.c  test-fuzzy-highlight.c  test-fuzzy-index.c  test-fuzzy-mutable-index.c  test-graph-model.c  test-heap.c  test-int-pair.c  test-joined-menu.c  test-levenshtein.c  test-list-store-adapter.c  test-list-store.c  test-menu-manager.c  test-menu-manager2.c  test-model-filter.c  test-multi-paned.c  test-mutable-scoring.c  test-panel.c  test-path-bar.c  test-pattern-spec.c  test-pill-box.c  test-preferences.c  test-progress-button.c  test-progress-icon.c  test-progress-menu-button.c  (+21 more)
tools/: dazzle-list-counters.c  meson.build
(+190 files in other folders)
